[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "doit"
path = "examples/doit.rs"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
more-asserts = "0.3.1"
rand = "0.10.1"
regex = "1.12.3"
serde_json = "1.0.149"
tempfile = "3.27.0"

[dev-dependencies]
cargo-llvm-cov = "0.8.6"

[lints.rust]
warnings = "deny"
dead_code = "allow"